新增productDTO、餐點管理CRUD

--- a/EnjoyEat/EnjoyEat/Areas/backend/Views/Product/Index.cshtml
+++ b/EnjoyEat/EnjoyEat/Areas/backend/Views/Product/Index.cshtml
@@ -25,26 +25,51 @@
         .modal-footer > #deletebtn {
             margin-right: auto;
         }
+
+        #tableArea {
+            height: 60vh;
+            overflow: auto;
+        }
+
+        #tableArea::-webkit-scrollbar {
+            width: 15px;
+            border-radius: 2px;
+        }
+
+        #tableArea::-webkit-scrollbar-track {
+                background: #6C7293;
+        }
+
+        #tableArea::-webkit-scrollbar-thumb {
+                background: #EB1616;
+                border-radius: 2px;
+        }
+
+        .pb-3 {
+             padding-bottom: 0 !important; 
+        }
+
+        
     </style>
 }
 
-<div id="app" class="container-fluid pt-4 px-4">
+<div id="app" class="container-fluid px-4">
     @*標題欄*@
     <div class="titleBar">
         <h3 class="text-primary">餐點管理</h3>
-        <button type="button" class="btn btn-outline-primary" data-bs-target="#AddModal" data-bs-toggle="modal" @@click="showAddModal"><i class="fas fa-plus-square"></i> 新增餐點</button>
+        <button type="button" class="btn btn-outline-primary" data-bs-target="#AddModal" data-bs-toggle="modal" @@click="showAddModal()"><i class="fas fa-plus-square"></i> 新增餐點</button>
     </div>
     @*篩選區*@
-    <div class="row g-4 searchNav">
+    <div class="row g-4 searchNav rounded mb-4">
         @*文字篩選*@
         <div class="col">
-            <div class="bg-secondary p-4">
+            <div class="bg-secondary p-3">
                 <input type="text" class="form-control" id="floatingInput" placeholder="🔍 請輸入餐點名稱" v-model="keyword">
             </div>
         </div>
         @*分類篩選*@
         <div class="col">
-            <div class="bg-secondary p-4">
+            <div class="bg-secondary p-3">
                 <form action="#">
                     <select class="form-select" aria-label="Default select" v-model="categoryName" v-if="category">
                         <option disabled selected value="">請選擇餐點分類</option>
@@ -58,7 +83,7 @@
         </div>
         @*子分類篩選*@
         <div class="col">
-            <div class="bg-secondary p-4">
+            <div class="bg-secondary p-3">
                 <form action="#">
                     <select class="form-select" aria-label="Default select" v-model="subCategoryName" v-if="subCategory">
                         <option disabled selected value="">請選擇餐點子分類</option>
@@ -74,8 +99,8 @@
     @*餐點表格區*@
     <div class="row g-4">
         <div class="col-12">
-            <div class="bg-secondary rounded h-100 p-4">
-                <div class="table-responsive">
+            <div id="tableArea" class="bg-secondary rounded p-4">
+                <div>
                     <table class="table">
                         <thead>
                             <tr>
@@ -93,7 +118,7 @@
                         </thead>
                         <tbody>
                             <tr v-for="p in filterproducts" :key="p.productId" class="trProduct">
-                                <td scope="row"><i class="fa sharp fa-solid fa-pen" data-bs-target="#EditModal" data-bs-toggle="modal"></i>&emsp;{{p.productId}}</td>
+                                <td scope="row"><i class="fa sharp fa-solid fa-pen" data-bs-target="#EditModal" data-bs-toggle="modal" @@click="EditProduct(p.productId)"></i>&emsp;{{p.productId}}</td>
                                 <td><img :src="baseUrl + p.mealImg" style="width:50px; border-radius:2px" /></td>
                                 <td>{{p.productName}}</td>
                                 <td>{{p.costs}}</td>
@@ -119,15 +144,15 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <label>餐點編號: </label><input type="text" class="form-control" v-model="newProduct.productId" placeholder="EX:70">
-                    <label>餐點圖片: </label><input type="file" class="form-control form-control-sm bg-dark" v-bind="newProduct.mealImg" placeholder="EX:.png、.jpg">
-                    <label>餐點名稱: </label><input type="text" class="form-control" v-model="newProduct.productName" placeholder="EX:番茄牛喃燉飯">
-                    <label>餐點成本: </label><input type="text" class="form-control" v-model="newProduct.costs" placeholder="EX:200">
-                    <label>餐點售價: </label><input type="text" class="form-control" v-model="newProduct.unitPrice" placeholder="EX:400">
+                    <label>餐點編號(必填): </label><input type="text" class="form-control" v-model="newProduct.productId" placeholder="EX:70" required>
+                    <label>餐點圖片: </label><input type="file" class="form-control form-control-sm bg-dark">@* @@change="selectImage()"*@
+                    <label>餐點名稱(必填): </label><input type="text" class="form-control" v-model="newProduct.productName" placeholder="EX:番茄牛喃燉飯" required>
+                    <label>餐點成本(必填): </label><input type="text" class="form-control" v-model="newProduct.costs" placeholder="EX:200" required>
+                    <label>餐點售價(必填): </label><input type="text" class="form-control" v-model="newProduct.unitPrice" placeholder="EX:400" required>
                     <label>餐點庫存: </label><input type="text" class="form-control" v-model="newProduct.stock" placeholder="EX:100">
-                    <label>餐點子分類編號: </label>
+                    <label>餐點子分類編號(必填): </label>
                     <form action="#">
-                        <select class="form-select" aria-label="Default select" v-model="newProduct.subCategoryId">
+                        <select class="form-select" aria-label="Default select" v-model="newProduct.subCategoryId" required>
                             <option disabled selected value="">請選擇餐點子分類編號</option>
                             <option v-for="s in subCategoryAll" :key="s.subcategoryId">
                                 {{ s.subCategoryId }}
@@ -153,15 +178,15 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <label>餐點編號: </label><input type="text" class="form-control" v-model="newProduct.productId">
-                    <label>餐點圖片: </label><input type="file" class="form-control form-control-sm bg-dark" v-bind="newProduct.mealImg">
-                    <label>餐點名稱: </label><input type="text" class="form-control" v-model="newProduct.productName">
-                    <label>餐點成本: </label><input type="text" class="form-control" v-model="newProduct.costs">
-                    <label>餐點售價: </label><input type="text" class="form-control" v-model="newProduct.unitPrice">
+                    <label>餐點編號: </label><input type="text" class="form-control" v-model="newProduct.productId" disabled>
+                    <label>餐點圖片: </label><input type="file" class="form-control form-control-sm bg-dark">@*@@change="selectImage()"*@
+                    <label>餐點名稱: </label><input type="text" class="form-control" v-model="newProduct.productName" required>
+                    <label>餐點成本: </label><input type="text" class="form-control" v-model="newProduct.costs" required>
+                    <label>餐點售價: </label><input type="text" class="form-control" v-model="newProduct.unitPrice" required>
                     <label>餐點庫存: </label><input type="text" class="form-control" v-model="newProduct.stock">
                     <label>餐點子分類編號: </label>
                     <form action="#">
-                        <select class="form-select" aria-label="Default select" v-model="newProduct.subCategoryId">
+                        <select class="form-select" aria-label="Default select" v-model="newProduct.subCategoryId" required>
                             <option disabled selected value="">請選擇餐點子分類編號</option>
                             <option v-for="s in subCategoryAll" :key="s.subcategoryId">
                                 {{ s.subCategoryId }}
@@ -174,7 +199,7 @@
                 <div class="modal-footer">
                     <button type="button" class="btn btn-outline-primary" id="deletebtn" data-bs-target="#DeleteModal" data-bs-toggle="modal"><i class="fa solid fa-trash"></i> 刪除餐點</button>
                     <button type="button" class="btn btn-outline-light" data-bs-dismiss="modal">取消</button>
-                    <button type="button" class="btn btn-outline-success">編輯完成</button>
+                    <button type="button" class="btn btn-outline-success" @@click="UpdateProduct()">編輯完成</button>
                 </div>
             </div>
         </div>
@@ -188,11 +213,17 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                   
+                   <h6>確定刪除以下餐點嗎?</h6>
+                   <p>餐點編號: {{newProduct.productId}}</p>
+                   <p>餐點名稱: {{newProduct.productName}}</p>
+                   <div>
+                        <p>餐點圖片:</p>
+                        <img :src="baseUrl + newProduct.mealImg" style="width:80px; border-radius:2px" />
+                   </div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-outline-light" data-bs-dismiss="modal">取消</button>
-                    <button type="button" class="btn btn-outline-success">刪除</button>
+                    <button type="button" class="btn btn-outline-success" @@click="DeleteProduct()">確定</button>
                 </div>
             </div>
         </div>
@@ -266,7 +297,7 @@
                 // 讀取餐點
                 getProduct: function () {
                     let _this = this;
-                    _this.baseUrl = window.location.origin + '/';
+                    _this.baseUrl = window.location.origin;
                     axios.get("/api/ProductAPI/GetProduct")
                         .then(response => {
                             _this.product = response.data;
@@ -294,7 +325,13 @@
                 showAddModal: function () {
                     let _this = this;
                     _this.newProduct = {};
-                    //$("#AddModal").modal("show");
+                },
+                // 新增圖片
+                selectImage: function (event) {
+                    let _this = this;
+                    let file = event.target.files[0];
+                    _this.newProduct.mealImg = file;
+                    console.log(_this.newProduct.mealImg);
                 },
                 // 新增餐點
                 AddProduct: function () {
@@ -310,21 +347,144 @@
                         Description: _this.newProduct.description,
                         Recipt: _this.newProduct.recipt,
                     };
+                    //var d = new FormData();
+                    //d.append('image', _this.newProduct.mealImg);
+                    //axios.post(`${baseAddress}/api/ProductAPI/UploadImage`, d)
+
                     axios.post(`${baseAddress}/api/ProductAPI/CreateProduct`, request)
                         .then(response => {
-                            _this.getProduct(); // 添加成功刷新
-                            _this.sweatAlert("success", "新增成功");
-                            $("#AddModal").modal("hide"); // 隱藏AddModal
+                            $("#AddModal").modal("hide"); // 隱藏AddModal)
+                            if (response.data.status == true) {
+                                _this.getProduct(); // 畫面刷新
+                                _this.successAlert(response);
+                            } else {
+                                _this.errorAlert(response);
+                            }
                         });
                 },
-                //// 刪除餐點
-                //DeleteProduct: function () {
-                    
-                //},
-                //// 編輯餐點
-                //EditProduct: function () {
-
-                //},
+                // 編輯餐點
+                EditProduct: function(productId){
+                    let _this = this;
+                    var proIndex = -1;
+                    for (var i = 0; i < _this.product.length; i++) {
+                        var pro = _this.product[i];
+                        if (productId == pro.productId) {
+                            proIndex = i;
+                            break;
+                        }
+                    };
+                    if (proIndex !== -1) {
+                        var editedpro = _this.product[proIndex];
+                        _this.newProduct.productId = editedpro.productId;
+                        _this.newProduct.mealImg  = editedpro.mealImg;
+                        _this.newProduct.productName = editedpro.productName;
+                        _this.newProduct.costs = editedpro.costs;
+                        _this.newProduct.unitPrice = editedpro.unitPrice;
+                        _this.newProduct.stock = editedpro.stock;
+                        _this.newProduct.subCategoryId = editedpro.subCategoryId;
+                        _this.newProduct.description = editedpro.description
+                        _this.newProduct.recipt = editedpro.recipt;
+                    };
+                },
+                // 更新餐點
+                UpdateProduct: function(){
+                    let _this = this;
+                    var request = {
+                        ProductId: _this.newProduct.productId,
+                        MealImg: _this.newProduct.mealImg,
+                        ProductName: _this.newProduct.productName,
+                        Costs: _this.newProduct.costs,
+                        UnitPrice: _this.newProduct.unitPrice,
+                        Stock: _this.newProduct.stock,
+                        SubCategoryId: _this.newProduct.subCategoryId,
+                        Description: _this.newProduct.description,
+                        Recipt: _this.newProduct.recipt,
+                    };
+                    console.log(request);
+                    axios.post(`${baseAddress}/api/ProductAPI/EditProduct`, request)
+                        .then(response => {
+                            _this.newProduct.mealImg = '',
+                            _this.newProduct.productName = '',
+                            _this.newProduct.costs = '',
+                            _this.newProduct.unitPrice = '',
+                            _this.newProduct.stock = '',
+                            _this.newProduct.subCategoryId = '',
+                            _this.newProduct.description = '',
+                            _this.newProduct.recipt = '',
+                            $("#EditModal").modal("hide"); // 隱藏EditModal
+                            if (response.data.status == true) {
+                                _this.getProduct(); // 畫面刷新
+                                _this.successAlert(response);
+                            } else {
+                                _this.errorAlert(response);
+                            };
+                            
+                        });
+                },
+                // 刪除餐點
+                DeleteProduct: function(){
+                    let _this = this;
+                    var request = {
+                        ProductId: _this.newProduct.productId,
+                        MealImg: _this.newProduct.mealImg,
+                        ProductName: _this.newProduct.productName,
+                        Costs: _this.newProduct.costs,
+                        UnitPrice: _this.newProduct.unitPrice,
+                        Stock: _this.newProduct.stock,
+                        SubCategoryId: _this.newProduct.subCategoryId,
+                        Description: _this.newProduct.description,
+                        Recipt: _this.newProduct.recipt,
+                    };
+                    axios.post(`${baseAddress}/api/ProductAPI/DeleteProduct`, request)
+                        .then(response => {
+                            $("#DeleteModal").modal("hide"); // 隱藏DeleteModal
+                            $("#EditModal").modal("hide"); // 隱藏EditModal
+                            if (response.data) {
+                                _this.getProduct(); // 畫面刷新
+                                Swal.fire({
+                                    allowOutsideClick: false,
+                                    icon: 'success',
+                                    color: '#333',
+                                    iconColor: '#D8CDB9',
+                                    background: '#FFF',
+                                    title: '刪除成功',
+                                    showConfirmButton: false,
+                                    timer: 2000,
+                                    position: 'center'
+                                });
+                            }
+                        });
+                },
+                // 成功提示
+                successAlert(response) {
+                    let _this = this;
+                    Swal.fire({
+                        allowOutsideClick: false,
+                        icon: 'success',
+                        color: '#333',
+                        iconColor: '#D8CDB9',
+                        background: '#FFF',
+                        title: response.data.message,
+                        showConfirmButton: false,
+                        timer: 2000,
+                        position: 'center'
+                    });
+                },
+                // 失敗提示
+                errorAlert(response) {
+                    let _this = this;
+                    Swal.fire({
+                        allowOutsideClick: false,
+                        icon: 'error',
+                        color: '#333',
+                        iconColor: '#D8CDB9',
+                        background: '#FFF',
+                        title: response.data.message,
+                        showConfirmButton: false,
+                        timer: 2000,
+                        position: 'center'
+                    });
+                },
             }
         });
     </script>
