--- a/EnjoyEat/EnjoyEat/Views/Reservations/success.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/Reservations/success.cshtml
@@ -6,7 +6,7 @@
 <div class="container" id="bookedConfirm">
     <div>
         <div class="flex-shrink-0" style="text-align:center">
-            <p><img src="~/img/success.png" id="successicon" />您已訂位成功，訂位詳細資訊已寄至您的信箱!</p>
+            <p><img src="~/img/success.png" id="successicon" />您已訂位成功!</p>
         </div>
     </div>
 </div>
