--- a/EnjoyEat/EnjoyEat/Areas/backend/Views/ReservationManagement/Index.cshtml
+++ b/EnjoyEat/EnjoyEat/Areas/backend/Views/ReservationManagement/Index.cshtml
@@ -13,7 +13,7 @@
         }
 
         .datepicker input {
-                height: 38px;
+            height: 38px;
             color: black;
         }
 
@@ -23,9 +23,8 @@
             margin-right: 0px;
             text-align: center;
             width: 20%;
-            background-color: #6c757d;
-            color:lightgray;
         }
+
         td input{
             background-color: #6c757d;
             color: lightgray;
@@ -165,7 +164,8 @@
                             <input class="form-control col-md-4" v-model="create.ReserveName" type="text" id="create_reserveName">
                             <label for="create_phone">聯絡電話：</label>
                             <input class="form-control col-2" v-model="create.Phone" type="text" id="create_phone"  maxlength="10" minlength="10">
-
+                                <label for="create_phone">Email：</label>
+                                <input class="form-control col-2" v-model="create.Email" type="text" id="create_email" >
                             <label>用餐時段：</label>
                             <select class="form-control col-2" name="" id="ReserveTime" v-model="create.ReserveTime">
                                 <option value="" disabled selected></option>
@@ -259,6 +259,7 @@
                     Kid: '',
                     ReserveName: '',
                     Phone: '',
+                    Email:'',
                     note: '',
                 }
             },
@@ -279,12 +280,19 @@
                 //},
                 filterReserve: function () {
                     let _this = this;
-                    var request = {};
-                    request.ReserveId = isNaN(parseInt(_this.searchText)) ? -1 : parseInt(_this.searchText);
-                    request.ReservationName = request.PhoneNumber = request.NumberofAdultGuest = request.NumberofKidGuest
-                        = request.Note = _this.searchText;
+                    var request = { };
+                    //request.ReserveId = isNaN(parseInt(_this.searchText)) ? -1 : parseInt(_this.searchText);
+                    if (!isNaN(parseInt(_this.searchText))){
+                        request.ReserveId = request.ReservationName = request.PhoneNumber = request.NumberofAdultGuest = request.ReserveDate
+                            = request.ReserveTime  = request.NumberofKidGuest = request.Note = _this.searchText
+                    }
+                    else{
+                        request.ReservationName = request.PhoneNumber = request.NumberofAdultGuest = request.NumberofKidGuest = request.Note = _this.searchText;
+                    }
+                    
                     axios.post(`/api/ReservationManagementApi/FilterReservation`, request).then(response => {
                         _this.reserveInfo = response.data;
+                        _this.formatDate();
                         var temp = []
                         for (var i = 0; i < _this.reserveInfo.length; i++) {
                             var item = _this.reserveInfo[i];
@@ -300,7 +308,6 @@
                         this.reserveInfo[i].reservationDate = date.getFullYear() + '-' + (date.getMonth() + 1).toString().padStart(2, '0') + '-' + date.getDate().toString().padStart(2, '0')
                     }
                 },
-
                 disablerange: function (date) {
                     var today = new Date();
                     today.setHours(0, 0, 0, 0);
@@ -389,7 +396,6 @@
                     if (ret == true) {
                         axios.delete(`/api/ReservationManagementApi/DeleteReservationManagement/${rev.reserveId}`)
                             .then(response => {
-                                _this.reserveInfo = response.data;
                                 _this.getreserve();
                             })
                     }
@@ -402,6 +408,7 @@
                         numberofAdultGuest: _this.create.Adult,
                         numberofKidGuest: _this.create.Kid,
                         phoneNumber: _this.create.Phone,
+                        email:_this.create.Email,
                         reservationName: _this.create.ReserveName,
                         note: _this.create.note,
                     };
