--- a/EnjoyEat/EnjoyEat/Views/Reservations/Index.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/Reservations/Index.cshtml
@@ -26,9 +26,25 @@
             justify-content: center;
             height: 100%;
         }
-        #ruleContainer li, #ruleContainer p{
-            text-align:left;
-            margin-bottom:0;
+
+        #ruleContainer li, #ruleContainer p {
+            text-align: left;
+            margin-bottom: 0;
+        }
+
+        #adultPicker, #kidPicker {
+            margin: 10px;
+            border-radius: 0;
+            box-shadow: none;
+            background: #0c0b09;
+            border-color: #625b4b;
+            color: #625b4b;
+            font-size: 14px;
+            height:44px;
+        }
+
+        #location{
+        margin-bottom:15px;
         }
 
     </style>
@@ -43,17 +59,21 @@
                     <h2>立即訂位</h2>
                     <p>訂位</p>
                 </div>
-                <form role="form" class="php-email-form" data-aos="fade-up" data-aos-delay="100">
+                <form role="form"
+                      class="php-email-form"
+                      data-aos="fade-up"
+                      data-aos-delay="100">
+
                     <div class="row">
                         <label>用餐人數</label>
                         <div class="col-lg-6 form-group d-flex">
-                            <select name="" id="adultPicker" class="book-a-table form-control form-select" v-model="adultNumber" required>
+                            <select name="" id="adultPicker" class="form-control php-email-form" v-model="adultNumber" required>
                                 <option value="" disabled selected>請選擇大人人數</option>
                                 <template>
                                     <option :value="ad.value" v-for="ad in adultPicker">{{ad.txt}}</option>
                                 </template>
                             </select>
-                            <select name="" id="kidPicker" class="book-a-table form-control form-select" v-model="kidNumber">
+                            <select name="" id="kidPicker" class="form-control php-email-form" v-model="kidNumber">
                                 <option value="" disabled selected>請選擇小孩人數</option>
                                 <template>
                                     <option :value="k.value" v-for="k in kidPicker">{{k.txt}}</option>
@@ -61,30 +81,34 @@
                             </select>
                         </div>
                     </div>
-                    <!-- datepicke -->
-                    <label for="datepicker">用餐日期</label>
-                    <div id="d1" class="calendar">
-                        <!-- datepicker -->
-                        <date-picker v-model="ReserveDate"
-                                     value-type="format"
-                                     name="ReserveDate"
-                                     id="datepicker"
-                                     class="col-lg-8 form-selectss "
-                                     placeholder="請選擇用餐日期"
-                                     :disabled-date="disablerange" style="width:248px">
-                                 </date-picker>
+                    <div class="col-lg-6 form-group d-flex row">
+                        <!-- datepicke -->
+                        <label for="datepicker">用餐日期</label>
+                        <div id="d1" class="">
+                            <!-- datepicker -->
+                            <date-picker v-model="ReserveDate"
+                                         value-type="format"
+                                         name="ReserveDate"
+                                         id="datepicker"
+                                         class="datepicker p-0  form-control php-email-form "
+                                         placeholder="請選擇用餐日期"
+                                         :disabled-date="disablerange">
+                            </date-picker>
+                        </div>
                     </div>
-                    <label>用餐時段</label>
-                    <div class="col-lg-6 form-group" id="mealTimePicker">
-                        <select name="time" id="mealTimePicker" class="book-a-table form-control" v-model="mealTime">
-                            <option value="" disabled selected>請選擇用餐時段</option>
-                            <template>
-                                <option :value="mt.value" v-for="mt in mealTimePicker">{{mt.txt}}</option>
-                            </template>
-                        </select>
+                    <div class="col-lg-6 form-group d-flex row">
+                        <label >用餐時段</label>
+                        <div id="mealTimePicker" class="">
+                            <select name="time" id="mealTimePicker" class=" form-control " v-model="mealTime">
+                                <option value="" disabled selected>請選擇用餐時段</option>
+                                <template>
+                                    <option :value="mt.value" v-for="mt in mealTimePicker">{{mt.txt}}</option>
+                                </template>
+                            </select>
+                        </div>
                     </div>
                     <br />
-                    <label>餐廳位置</label>
+                    <label id="location">餐廳位置</label>
                     <br />
                     <div data-aos="fade-up">
                         <iframe style="border: 0; width: 50%; height: 250px"
@@ -159,17 +183,17 @@
                                     <div id="ruleContainer">
                                         <h5>【預約時的注意事項】</h5>
                                         <ul>
-                                        <li>餐廳接受一個月內的線上訂位。</li>
-                                        <li>用餐時間120分鐘。</li>
-                                        <li>只為有效聯絡電話之預訂保留座位。</li>
-                                        <li>於線上訂位成功後，若餐廳無法聯繫上訂位人做訂位確認時，本餐廳將保有取消其訂位之權利。</li>
-                                        <li>為確保客人用餐權益，若需取消或更改訂位，請提前告知。</li>
-                                        <li>訂位將保留15分鐘，若逾時將自動取消訂位。</li>
-                                        <li>線上預訂系統將自動安排座位，如需指定座位請致電至餐廳。</li>
-                                        <li>特殊節日恕不接受線上預訂。</li>
-                                        <li>本餐廳保留條款內容變更與解釋、暫停或終止本線上訂位之權利。</li>
-                                        <p>服裝儀容：</p>
-                                        <li>賓客請避免穿著拖鞋，男士請避免穿著無袖背心</li>
+                                            <li>餐廳接受一個月內的線上訂位。</li>
+                                            <li>用餐時間120分鐘。</li>
+                                            <li>只為有效聯絡電話之預訂保留座位。</li>
+                                            <li>於線上訂位成功後，若餐廳無法聯繫上訂位人做訂位確認時，本餐廳將保有取消其訂位之權利。</li>
+                                            <li>為確保客人用餐權益，若需取消或更改訂位，請提前告知。</li>
+                                            <li>訂位將保留15分鐘，若逾時將自動取消訂位。</li>
+                                            <li>線上預訂系統將自動安排座位，如需指定座位請致電至餐廳。</li>
+                                            <li>特殊節日恕不接受線上預訂。</li>
+                                            <li>本餐廳保留條款內容變更與解釋、暫停或終止本線上訂位之權利。</li>
+                                            <p>服裝儀容：</p>
+                                            <li>賓客請避免穿著拖鞋，男士請避免穿著無袖背心</li>
                                         </ul>
                                     </div>
                                 </template>
