--- a/EnjoyEat/EnjoyEat/Views/Reservations/booking.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/Reservations/booking.cshtml
@@ -20,15 +20,15 @@
                       data-aos="fade-up"
                       data-aos-delay="100">
                     <div class="row">
-                        <div class="form-check" id="sameMemberDiv">
+                        @*<div class="form-check" id="sameMemberDiv">
                             <input class="" type="checkbox" value="" id="sameMemberCheck" role="radio">
                             <label class="form-check-label" for="" id="sameMember">
                                 同會員資訊
                             </label>
-                        </div>
+                        </div>*@
                         <div class="validate"></div>
                     </div>
-                    <div class="col-lg-4 col-md-6 form-group" id="NameCheck">
+                    <div class=" col-lg-4 col-md-6 form-group">
                         <input type="text"
                                name="name"
                                class="form-control"
@@ -37,11 +37,24 @@
                                placeholder="訂位人姓名"
                                data-rule="minlen:4"
                                data-msg="請輸入至少三個字元" />
-                        <br />
-                        <input class="" type="checkbox" value="" id="femaleCheck" role="radio">
+                       
+                        @*<input class="" type="checkbox" value="" id="femaleCheck" role="radio">
                         <label for="text" id="female">女士</label>
                         <input class="" type="checkbox" value="" id="maleCheck" role="radio">
                         <label for="text" id="female">男士</label>
+                        <div class="validate"></div>*@
+                    </div>
+                    <div class="col-lg-4 col-md-6 form-group mt-3 mt-md-0">
+                        <input type="text"
+                               class="form-control"
+                               name="phone"
+                               id="phone"
+                               v-model="phone"
+                               placeholder="您的手機號碼"
+                               data-rule="minlen:4"
+                               data-msg="請輸入完整的手機號碼"
+                               maxlength="10"
+                               minlength="10" />
                         <div class="validate"></div>
                     </div>
                     <div class="col-lg-4 col-md-6 form-group mt-3 mt-md-0">
@@ -55,19 +68,7 @@
                                data-msg="請輸入完整的Email訊息" />
                         <div class="validate"></div>
                     </div>
-                    <div class="col-lg-4 col-md-6 form-group mt-3 mt-md-0">
-                        <input type="text"
-                               class="form-control"
-                               name="phone"
-                               id="phone"
-                               v-model="phone"
-                               placeholder="您的手機號碼"
-                               data-rule="minlen:4"
-                               data-msg="請輸入完整的手機號碼"
-                               maxlength="10" 
-                               minlength="10" />
-                        <div class="validate"></div>
-                    </div>
+                    
                     <div class="form-group mt-2">
                         <textarea class="form-control"
                                   name="message"
