--- a/EnjoyEat/EnjoyEat/Views/MemberLogin/Index.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/MemberLogin/Index.cshtml
@@ -13,6 +13,9 @@
                         <i class="fa-solid fa-right-to-bracket"></i>
                     </h1>
                 </div>
+                <div id="AccountHelpBlock" class="form-label nono" v-if="active">
+                    帳號尚未認證，請至郵件認證再登入
+                </div>
                 <div id="AccountHelpBlock" class="form-label nono" v-if="show">
                     帳號或密碼輸入錯誤，請重新確認
                 </div>
@@ -57,12 +60,14 @@
                 password: "",
                 show: false,
                 short:false,
+                active:false,
             },
             methods: {
                 login: function () {
                     let _this = this;
                     _this.short = false;
                     _this.show = false;
+                    _this.active = false;
                     if(_this.account.length < 8 || _this.password.length < 8){
                         return _this.short =true
                     }
@@ -78,6 +83,9 @@
                             else if(response.data.redirect) {
                                 // 從點餐頁面來的會根據後端的重定向跳轉到相應頁面
                                 window.location.href = response.data.redirect;
+                            }
+                            else if (response.data == "此帳號尚未驗證，請至信箱驗證"){
+                                _this.active=true;
                             }
                             else {
                                 Swal.fire({
